Added Docker and modified prompts for better transcriptions

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 OPENAI_API_KEY=your_api_key
+NGROK_AUTHTOKEN=ngrok_authtoken
 CUSTOMGPT_API_KEY=your_customgpt_api_key
+NGROK_DOMAIN=your_ngrok_static_domain
