--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY=your_api_key
 NGROK_AUTHTOKEN=ngrok_authtoken
 CUSTOMGPT_API_KEY=your_customgpt_api_key
 NGROK_DOMAIN=your_ngrok_static_domain
+REDIS_URL=redis://localhost:6479
