--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 OPENAI_API_KEY=your_api_key
 NGROK_AUTHTOKEN=ngrok_authtoken
 CUSTOMGPT_API_KEY=your_customgpt_api_key
+PERSONAL_PHONE_NUMBER=your_support_phone_number
 NGROK_DOMAIN=your_ngrok_static_domain
 REDIS_URL=redis://localhost:6479
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
